# mlops_hw

lesson2/: .pre-commit-config.yaml  pyproject.toml
lesson2/seminar/step3_pipeline_basic/src/: evaluate.py
lesson2/seminar/validation_model/: dvc.yaml  validation_model.py
lesson4/seminar/step4_monitoring/: main.py
lesson4/seminar/step4_monitoring/config/: monitoring_config.yaml
lesson4/seminar/step4_monitoring/src/: config.py  logger.py  monitor.py
lesson4/seminar_zhitnikova/step4_monitoring/src/: config.py  logger.py  main.py  monitor.py
